<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:textIsSelectable="true"
    android:orientation="vertical"
    tools:context=".RecipeDetailFragment">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tv_recipe_title" />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tv_recipe_servings" />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tv_recipe_ingredients" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_recipe_step_id" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_recipe_step_title" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_recipe_step_description" />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/iv_step_image"/>
    <com.google.android.exoplayer2.ui.PlayerView
        android:layout_width="375dp"
        android:layout_height="300dp"
        android:id="@+id/exo_video"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent" />
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/back_step"
            android:gravity="center"
            android:layout_gravity="left"
            android:text="@string/button_back_step"
            android:onClick="onClickBackStep"
            android:visibility="invisible"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent" />
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/next_step"
            android:gravity="center"
            android:layout_gravity="right"
            android:text="@string/button_next_step"
            android:onClick="onClickNextStep"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent" />
    </LinearLayout>


</LinearLayout>